--- a/campaign/templates/app/campaign/campaign-leads.html
+++ b/campaign/templates/app/campaign/campaign-leads.html
@@ -1,5 +1,5 @@
 {% extends "app/campaign/campaign-base.html" %}
-
+{% load static %}
 {% block title %}Campaign Leads{% endblock %}
 
 {% block cmp-base-content %}
@@ -50,7 +50,7 @@
     }
 </style>
 
-<div class="flex flex-col h-full">
+<div id="first" class="flex flex-col h-full">
     <!-- Header -->
     <div class="flex items-center justify-between mt-8">
         <div class="flex items-center gap-4">
@@ -133,7 +133,12 @@
 </dialog>
 
 
+<script src="{% static 'js/block-interactions.js' %}"></script> 
 <script>
+    
+    {% if view_only %}
+        blockInteractions('#first');
+    {% endif %}
 
 function assignList2Campaign() {
     const selectElement = document.getElementById("lead-list-select");
