--- a/campaign/templates/app/campaign/sequence.html
+++ b/campaign/templates/app/campaign/sequence.html
@@ -1,5 +1,5 @@
 {% extends "app/campaign/campaign-base.html" %}
-
+{% load static %}
 {% block title %}Campaign Sequence{% endblock %}
 
 {% block cmp-base-content %}
@@ -50,9 +50,9 @@
     }
 </style>
 
-<div class="flex flex-col h-full">
+<div id="first" class="flex flex-col h-full">
     <!-- Header -->
-    <div class="flex items-center justify-between mt-8">
+    <div  class="flex items-center justify-between mt-8">
         <div class="flex items-center gap-4">
             <h3 class="text-xl font-semibold">Message Sequences</h3>
         </div>
@@ -245,7 +245,13 @@
     </form>
 </dialog>
 
+<script src="{% static 'js/block-interactions.js' %}"></script> 
 <script>
+    
+    {% if view_only %}
+        blockInteractions('#first');
+    {% endif %}
+
     // Assignments Modal
     let currentMessageId = null;
 
